# cmake-template

./: .gitignore  CMakeLists.txt  README.md
include/: main.hpp
samples/: CMakeLists.txt
samples/sample01/: main.cpp
source/: CMakeLists.txt  main.cpp
template/: CMakeLists.txt
template/include/: include.hpp
template/source/: CMakeLists.txt  main.cpp
template/test/: CMakeLists.txt
template/test/tests/: tests.cpp
test/: CMakeLists.txt
test/test01/: main.cpp
